@@ -18,50 +18,62 @@
 ## You should have received a copy of the GNU General Public License
 ## along with RcppBDT.  If not, see <http://www.gnu.org/licenses/>.
 
+getBDT <- function() {
+    bdtEnv$bdt
+}
+
 getEndOfBizWeek <- function(d = Sys.Date()) {
     stopifnot(inherits(d, "Date"))
-    .bdt$getEndOfBizWeek(d)
+    bdtEnv$bdt$getEndOfBizWeek(d)
 }
 
 getEndOfMonth <- function(d = Sys.Date()) {
     stopifnot(inherits(d, "Date"))
-    .bdt$getEndOfMonth(d)
+    bdtEnv$bdt$getEndOfMonth(d)
 }
 
 getYear <- function(d = Sys.Date()) {
     stopifnot(inherits(d, "Date"))
-    .bdt$fromDate(d)
-    .bdt$getYear()
+    bdtEnv$bdt$fromDate(d)
+    bdtEnv$bdt$getYear()
 }
 
 getMonth <- function(d = Sys.Date()) {
     stopifnot(inherits(d, "Date"))
-    .bdt$fromDate(d)
-    .bdt$getMonth()
+    bdtEnv$bdt$fromDate(d)
+    bdtEnv$bdt$getMonth()
 }
 
 getDay <- function(d = Sys.Date()) {
     stopifnot(inherits(d, "Date"))
-    .bdt$fromDate(d)
-    .bdt$getDay()
+    bdtEnv$bdt$fromDate(d)
+    bdtEnv$bdt$getDay()
 }
 
 getDayOfWeek <- function(d = Sys.Date()) {
     stopifnot(inherits(d, "Date"))
-    .bdt$fromDate(d)
-    .bdt$getDayOfWeek()
+    bdtEnv$bdt$fromDate(d)
+    bdtEnv$bdt$getDayOfWeek()
 }
 
 getDayOfYear <- function(d = Sys.Date()) {
     stopifnot(inherits(d, "Date"))
-    .bdt$fromDate(d)
-    .bdt$getDayOfYear()
+    bdtEnv$bdt$fromDate(d)
+    bdtEnv$bdt$getDayOfYear()
 }
 
 getIMMDate <- function(mon, year) {     # defined as third Wednesday
-    .bdt$getIMMDate(mon, year)
+    bdtEnv$bdt$getIMMDate(mon, year)
 }
 
 getNthDayOfMthWeek <- function(nthday, mthweek, mon, year) {
-    .bdt$getNthDayMthWeek(nthday, mthweek, mon, year)
+    bdtEnv$bdt$getNthDayMthWeek(nthday, mthweek, mon, year)
+}
+
+getLastDayOfWeekInMonth <- function(nthday, mon, year) {
+    bdtEnv$bdt$getLastDayOfWeekInMonth(nthday, mon, year)
+}
+
+getFirstDayOfWeekInMonth <- function(nthday, mon, year) {
+    bdtEnv$bdt$getFirstDayOfWeekInMonth(nthday, mon, year)
 }
